[gd_scene load_steps=10 format=3 uid="uid://dfnilvpe7kk1r"]

[ext_resource type="Script" path="res://Objects/Dialog/dialog_buble.gd" id="1_wykyf"]
[ext_resource type="Theme" uid="uid://b2orsuuil3dch" path="res://UI/MainMenu/Theme.tres" id="2_d2ja4"]

[sub_resource type="Animation" id="Animation_lal05"]
resource_name = "TextSpin"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0349066, 0.0, -0.0349066]
}

[sub_resource type="Animation" id="Animation_mstto"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l653t"]
_data = {
"RESET": SubResource("Animation_mstto"),
"TextSpin": SubResource("Animation_lal05")
}

[sub_resource type="Animation" id="Animation_egqhn"]
resource_name = "Delete"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-200, -0.25, 0, 1, 2.08165e-12, -250, 0, 2.08165e-12, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 1, 2.08165e-12, 2.08165e-12, 0, 2.08165e-12, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 1, 2.08165e-12, 2.08165e-12, 0, 2.08165e-12, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pouaf"]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -200, -2, 2.08165e-12, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 2.08165e-12, 0.7, 0, 2.08165e-12, 2.08165e-12, 2.08165e-12, 1, -1, 2.08165e-12, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 2.08165e-12, 0.7, 0, 2.08165e-12, 2.08165e-12, 2.08165e-12, 1, -1, 2.08165e-12, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 1)
}

[sub_resource type="Animation" id="Animation_bbs56"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_by4c1"]
_data = {
"Delete": SubResource("Animation_egqhn"),
"RESET": SubResource("Animation_bbs56"),
"Spawn": SubResource("Animation_pouaf")
}

[node name="DialogBuble" type="Node2D"]
scale = Vector2(0.1, 0.1)
script = ExtResource("1_wykyf")

[node name="DialogBuble" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(1e-05, 1e-05)

[node name="RichTextLabel" type="RichTextLabel" parent="DialogBuble"]
offset_left = -192.0
offset_right = 192.0
offset_bottom = 48.0
pivot_offset = Vector2(192, 64)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
bbcode_enabled = true
text = "[center] TEST TEST TEST TEST TEST TEST TEST TEST TEST"
fit_content = true
scroll_active = false

[node name="Panel" type="Panel" parent="DialogBuble/RichTextLabel"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_d2ja4")

[node name="SpinAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../DialogBuble")
libraries = {
"": SubResource("AnimationLibrary_l653t")
}

[node name="LifeAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../DialogBuble")
libraries = {
"": SubResource("AnimationLibrary_by4c1")
}

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="animation_finished" from="LifeAnimator" to="." method="_on_life_animator_animation_finished"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
